--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "cross-env": "^7.0.3",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
