--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "There's no point to it.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev:lint": "eslint . --fix --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,13 @@
     "cross-env": "^7.0.3",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.12.2",
-    "typescript": "^4.2.3"
+    "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2"
+    "eslint-config-standard": "^16.0.2",
+    "typescript": "^4.2.3"
   }
 }
