--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "compilerOptions": {
-      "target": "es6",       
-      "module": "commonjs",  
-      "outDir": "./build",
-      "skipLibCheck": true
+        "target": "ES6",
+        "module": "commonjs",
+        
+        "outDir": "./build",
+        "resolveJsonModule": true
     },
     "include": ["./src/**/*"],
-    "exclude": [
-      "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
