--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dist": "node ./build/index.js",
-    "prod": "pm2 start ./build/index.js",
+    "dist": "node ./build/src/index.js",
+    "prod": "pm2 start ./build/src/1index.js",
     "dev": "ts-node-dev --ignore-watch data ./src/index.ts",
     "dev:lint": "eslint . --fix --ext .ts"
   },
