--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dist": "node ./build/src/index.js",
-    "prod": "pm2 start ./build/src/1index.js",
+    "prod": "pm2 start ./build/src/index.js",
     "dev": "ts-node-dev --ignore-watch data ./src/index.ts",
     "dev:lint": "eslint . --fix --ext .ts"
   },
