--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "alru"
   ],
   "author": "DamienVesper",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/DamienVesper/ZeropointBot/issues"
   },
