zeropoint was here

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.3.0",
     "mongoose": "^5.12.3",
     "ytdl-core": "^4.5.0"
   },
