--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dist": "node ./build/src/index.js",
-    "prod": "pm2 start ./build/src/index.js",
-    "dev": "ts-node-dev --ignore-watch data ./src/index.ts",
+    "dev": "node ./build/src/index.js",
+    "dist": "yarn build && yarn dev",
     "dev:lint": "eslint . --fix --ext .ts"
   },
   "repository": {
@@ -43,7 +42,6 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
 }
