--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.1",
-    "discord.js": "^12.5.1",
+    "discord.js-light": "^3.5.11",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "mongoose": "^5.13.3",
