--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,14 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs",
+
+        "moduleResolution": "node",
+        "esModuleInterop": true,
         
         "outDir": "./build",
         "resolveJsonModule": true
     },
+
     "include": ["./src/**/*"],
     "exclude": ["node_modules"]
 }
