--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           cmd: install
 
-      - name: Build Repository
+      - name: Build Project
         uses: borales/actions-yarn@v2.3.0
         with:
           cmd: build
