--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "node ./build/src/index.js",
-    "dist": "yarn build && yarn dev",
+    "dist": "node ./build/src/index.js",
+    "dev": "ts-node ./src/index.ts",
     "dev:lint": "eslint . --fix --ext .ts"
   },
   "repository": {
