--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,23 @@
 {
     "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
+        "es2021": true,
         "node": true
     },
     "extends": [
-        "standard",
-        "eslint:recommended"
+        "standard"
     ],
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint",
-        "import",
-        "node",
-        "promise"
-    ],
     "parserOptions": {
-        "ecmaVersion": 6
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
-        "indent": [1, 4, {
+        "indent": ["error", 4, {
             "SwitchCase": 1
         }],
-
         "semi": [2, "always"],
         "quotes": [2, "backtick", "avoid-escape"],
 
