move some stuff to .github

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "keywords": [
     "typescript",
     "discord.js",
-    "alru"
+    "nodejs"
   ],
   "author": "DamienVesper",
   "license": "AGPL-3.0",
