--- a/systemd.service
+++ b/systemd.service
@@ -4,7 +4,7 @@ Description=Alliance Reunited Discord bot.
 [Service]
 Type=simple
 WorkingDirectory=/opt/ZeropointBot
-ExecStart=/bin/bash /usr/bin/yarn dist
+ExecStart=/usr/bin/yarn dist
 
 [Install]
 WantedBy=multi-user.target
