--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.1",
+    "bufferutil": "^4.0.3",
     "discord.js-light": "^3.5.11",
     "dotenv": "^10.0.0",
+    "erlpack": "^0.1.3",
     "ffmpeg-static": "^4.4.0",
     "mongoose": "^5.13.3",
-    "ytdl-core": "^4.9.0"
+    "utf-8-validate": "^5.0.5",
+    "ytdl-core": "^4.9.0",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@types/node": "^16.4.3",
@@ -42,6 +46,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
 }
