start music util

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
-    "discord.js-light": "^3.5.11",
+    "discord-player": "^4.1.4",
+    "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "erlpack": "^0.1.3",
     "ffmpeg-static": "^4.4.0",
