--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
+    "discord-paginationembed": "^2.1.0",
     "discord-player": "^4.1.4",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
