--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bufferutil": "^4.0.3",
     "discord-paginationembed": "^2.1.0",
     "discord-player": "^5.0.1",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "erlpack": "^0.1.3",
     "ffmpeg-static": "^4.4.0",
@@ -49,5 +49,9 @@
     "eslint-plugin-promise": "^5.1.0",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">=1.22"
   }
 }
