--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "homepage": "https://github.com/DamienVesper/ZeropointBot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "@discordjs/voice": "^0.5.6",
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
-    "discord-paginationembed": "^2.1.0",
-    "discord-player": "^5.0.1",
+    "discord-player": "^5.0.2",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "erlpack": "^0.1.3",
