--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "discord-player": "^5.0.2",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
-    "erlpack": "^0.1.3",
+    "erlpack": "GingkathFox/erlpack",
     "ffmpeg-static": "^4.4.0",
     "mongoose": "^5.13.6",
     "utf-8-validate": "^5.0.5",
