--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
         "resolveJsonModule": true
     },
 
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "_src/music"],
     "exclude": ["node_modules"]
 }
