--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "mongoose": "^6.0.9",
+    "opusscript": "^0.0.8",
     "utf-8-validate": "^5.0.6",
     "zlib-sync": "^0.1.7"
   },
