--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@alliance-reunited/zeropointbot",
-  "version": "3.3.0",
   "description": "There's no point to it.",
+  "packageManager": "yarn@3.1.0",
+  "version": "3.3.0",
   "private": true,
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "dist": "node ./build/src/index.js",
@@ -29,25 +30,25 @@
     "@discordjs/opus": "^0.7.0",
     "@discordjs/voice": "^0.7.5",
     "axios": "^0.24.0",
-    "bufferutil": "^4.0.4",
+    "bufferutil": "^4.0.5",
     "discord-player": "^5.1.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "mongoose": "^6.0.13",
     "opusscript": "^0.0.8",
-    "utf-8-validate": "^5.0.6",
+    "utf-8-validate": "^5.0.7",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.31.0",
+    "eslint": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^5.1.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
