--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dist": "node ./build/src/index.js",
+    "start": "node ./build/src/index.js",
     "dev": "ts-node ./src/index.ts",
     "dev:lint": "eslint . --fix --ext .ts"
   },
