--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
 
 jobs:
-  build:
-    name: Build
+  nodejs:
+    name: Node.js
     runs-on: ubuntu-latest
 
     strategy:
@@ -25,5 +25,8 @@ jobs:
       - name: Install Packages
         run: yarn
 
-      - name: Build Project
+      - name: Build
         run: yarn build
+
+      - name: Lint
+        run: yarn dev:lint:ci
