--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Install pNPM
+      - name: Install pnpm
         uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.20.3
